Criando Arquivo JS RF002; Continuando HTML

--- a/templates/RF002-log.html
+++ b/templates/RF002-log.html
@@ -3,12 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <title>Login</title>
+
+        <!-- Link Arquivo CSS -->
+         <link rel="stylesheet" href="/static/CSS/RF002-log.css">
+        <!-- Link Arquivo CSS Global -->
+         <link rel="stylesheet" href="/static/CSS/global.css">
+        <!-- Link Arquivo JS -->
+         <script defer src="/static/JS/RF002-log.js"></script>
+
     </head>
     <body>
         <header>
             <section class="container-header">
-
             </section>
         </header>
         <main>
@@ -17,8 +25,13 @@
                 <input type="e-mail" name="container-form__inp-email" id="container-form__inp-email">
                 <label for="container-form__senha-label">Senha</label>
                 <input type="password" name="container-form__inp-senha" id="container-form__inp-email">
-                <button class="">Concluir Login</button>
+                <button type="submit" class="container-form__btn-envio">Concluir Login</button>
             </form>
         </main>
+        <footer>
+            <section class="container-footer">
+                <img src="/static/IMG/Brand Identity and Design.svg" alt="Logo Easy Request">
+            </section>
+        </footer>
     </body>
 </html>
