--- a/templates/RF002-log.html
+++ b/templates/RF002-log.html
@@ -21,8 +21,8 @@
         </header>
         <main>
             <form action="POST" class="container-form">
-                <label for="container-form__email-label">E-mail</label>
-                <input type="e-mail" name="container-form__inp-email" id="container-form__inp-email">
+                <label for="container-form__SN-label">SN</label>
+                <input type="text" name="container-form__inp-SN" id="container-form__inp-SN">
                 <label for="container-form__senha-label">Senha</label>
                 <input type="password" name="container-form__inp-senha" id="container-form__inp-email">
                 <button type="submit" class="container-form__btn-envio">Concluir Login</button>
