Continuando o Estilo e Formatação

--- a/templates/RF002-log.html
+++ b/templates/RF002-log.html
@@ -15,18 +15,22 @@
 
     </head>
     <body>
-        <header>
-            <section class="container-header">
-            </section>
-        </header>
+        
+            
+       
         <main>
-            <form action="POST" class="container-form">
-                <label for="container-form__SN-label">SN</label>
-                <input type="text" name="container-form__inp-SN" id="container-form__inp-SN">
-                <label for="container-form__senha-label">Senha</label>
-                <input type="password" name="container-form__inp-senha" id="container-form__inp-email">
-                <button type="submit" class="container-form__btn-envio">Concluir Login</button>
-            </form>
+            <section class="container-main">
+            </section>
+            <div class="container-form">
+                <form action="POST">
+                    <h1>Login</h1>
+                    <label for="container-form__SN-label">SN:</label>
+                    <input placeholder="Digite seu SN" type="text" name="container-form__inp-SN" id="container-form__inp-SN">
+                    <label for="container-form__senha-label">Senha:</label>
+                    <input placeholder="Digite sua senha" type="password" name="container-form__inp-senha" id="container-form__inp-email">
+                    <button type="submit" class="container-form__btn-envio">Concluir Login</button>
+                </form>
+            </div>
         </main>
         <footer>
             <section class="container-footer">
