--- a/templates/RF002-log.html
+++ b/templates/RF002-log.html
@@ -22,12 +22,12 @@
             <section class="container-main">
             </section>
             <div class="container-form">
-                <form action="POST">
+                <form action="" method="POST">
                     <h1>Login</h1>
-                    <label for="container-form__SN-label">SN:</label>
-                    <input placeholder="Digite seu SN" type="text" name="container-form__inp-SN" id="container-form__inp-SN">
-                    <label for="container-form__senha-label">Senha:</label>
-                    <input placeholder="Digite sua senha" type="password" name="container-form__inp-senha" id="container-form__inp-email">
+                    <label for="inp-SN">SN:</label>
+                    <input placeholder="Digite seu SN" type="text" name="inp-SN" id="inp-SN">
+                    <label for="inp-senha">Senha:</label>
+                    <input placeholder="Digite sua senha" type="password" name="inp-senha" id="inp-senha">
                     <button type="submit" class="container-form__btn-envio">Concluir Login</button>
                 </form>
             </div>
