--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="nav-img">
-            <img src="" alt="">
+            <img src="/static/IMG/Brand Identity and Design.svg" alt="">
         </div>
     </nav>
     <main>
@@ -22,10 +22,11 @@
                 <h3 class="container__abaixo--descricao">Gerencie seus chamados de forma simples e rápida</h3>
             </div>
             <div class="container__abaixo--botoes">
-                <a href="/login" class="botao botao-login">LOGIN</a>
+                <p>Você ja possui Cadastro?</p>
+                <a href="/RF002" class="botao botao-login">Entrar</a>
                 <p>ou</p>
                 
-                <a href="/cadastro" class="botao botao-cadastro">Cadastre-se</a>
+                <a href="/RF001" class="botao botao-cadastro">Cadastre-se</a>
             </div>
         </div>
     </main>
