--- a/templates/RF007-manutConfirm.html
+++ b/templates/RF007-manutConfirm.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/CSS/RF007-manutConfirm.css">
-    <title>confirmanh nhfr eeeeexecusao</title>
+    <link rel="stylesheet" href="/static/CSS/global.css">
+
+    <script src="/static/JS/RF007-manutConfirm.js"></script>
+
+    <title></title>
 </head>
 <body>
     
@@ -19,8 +23,21 @@
         <div class="container">
             <h3>Confirmar finalização de serviço</h3>
 
-            <div class="container__situacao-tarefa">
+            <div class="container__caixa-de-texto">
+                <label for="texto">Inserir informações adicionais</label><br>
+                <textarea id="texto" class="caixa-texto" placeholder="Digite aqui"></textarea><br>
+                <button class="botao-enviar" onclick="enviarTexto()">Enviar</button>
             </div>
+
+            <div class="container__situacao-tarefa">
+                <p><strong>Escolha as opções:</strong></p>
+                <div id="opcoes" class="opcoes">
+                    <label><input type="checkbox" value="opcao01"> Não foi possível realizar a tarefa.</label><br>
+                    <label><input type="checkbox" value="opcao02"> Foi realizado mas necessita de outros cuidados.</label><br>
+                    <label><input type="checkbox" value="opcao03"> Tarefa foi totalmente realizada.</label><br>
+                </div>
+            </div>
+
             <button class="container__botao-finalizar"><p>Finalizar tarefa</p></button>
             
         </div>
