--- a/static/CSS/RF002-log.css
+++ b/static/CSS/RF002-log.css
@@ -31,10 +31,11 @@ main{
     top:20rem ;
     z-index: 1;
     background-color: var(--color01);
-    width: 35rem;
-    height: 32rem;
+    width: 37rem;
+    height: 40rem;
     border-radius: 5rem;
     position: absolute;
+    box-shadow:  5px 10px 18px black;
     
 }
 
@@ -88,7 +89,7 @@ button{
     border: 2px solid var(--color03); 
     color: var(--color01); 
     margin-bottom: 1rem;
-    margin-top: 1rem;
+    margin-top: 5rem;
 }
 
 /* Estilo da Logo */
@@ -118,8 +119,11 @@ footer{
 
 /* -------------RESPONSIVIDADE-------------- */
 
-@media only screen and (max-width: 450px) {
+
+
+@media screen (max-width: 450px) {
     .container-form{
+        top:25rem ;
         width: 70%;
         height: 90%; 
         transition: 0.2s;
@@ -163,11 +167,22 @@ footer{
     
 }
 
+@media screen(max-width: 370px) {
+    .container-form{
+        top:25rem ;
+    }
 
-@media only screen and (min-width: 768px) {...}
+    button{
+        width: 20rem;
+        padding: 1rem;
+        font-size: 1rem;
+        margin-bottom: 1rem;
+        margin-top: 2rem;
+    }
+}
 
-
-@media only screen and (min-width: 992px) {...}
-
-
-@media only screen and (min-width: 1200px) {...}
+/* @media only screen and (max-width: 1600px) {
+    .container-form{
+        top:10rem ;     
+    }
+} */
