conexão com o back com a interface

--- a/templates/RF002-log.html
+++ b/templates/RF002-log.html
@@ -19,7 +19,7 @@
             <section class="container-main">
             </section>
             <div class="container-form">
-                <form action="" method="POST">
+                <form action="/RF002" method="POST">
                     <h1>Login</h1>
                     <label for="inp-SN">SN:</label>
                     <input placeholder="Digite seu SN" type="text" name="inp-SN" id="inp-SN">
