--- a/static/CSS/RF001-cad.css
+++ b/static/CSS/RF001-cad.css
@@ -30,7 +30,7 @@ body {
 /* Estilo do campo de seleção (dropdown) */
 .form-container__select {
     width: 100%;
-    padding: 10px; 
+    padding: 0.5rem; 
     border-radius: 5px; 
     border: 1px solid var(--color03);
 }
@@ -65,7 +65,7 @@ body {
 /* Estilo dos campos de texto do formulário */
 .form-container__input-text, .form-container__input-file{
     width: 100%; 
-    padding: 10px; 
+    padding: 0.5rem; 
     border-radius: 5px; 
     border: 1px solid var(--color03); 
 }
@@ -112,8 +112,12 @@ body {
     }
 
     .form-container__input-text, .form-container__input-file {
-        padding: 8px; 
+        padding: 1rem; 
         font-size: 0.9rem; 
+    }
+
+    .form-container__select {
+        padding: 1rem; 
     }
 
     .form-container__button {
@@ -146,10 +150,14 @@ body {
     }
 
     .form-container__input-text, .form-container__input-file {
-        padding: 12px; 
+        padding: 1rem; 
         font-size: 1rem; 
     }
 
+    .form-container__select {
+
+        padding: 1rem; 
+    }
     .form-container__button {
         padding: 12px; 
         font-size: 1.1rem; 
