--- a/templates/RF001-cad.html
+++ b/templates/RF001-cad.html
@@ -41,7 +41,13 @@
                 <!-- Campo de entrada para o CPF -->
                 <div class="form-container__input">
                     <label for="cpf" class="form-container__label">CPF:</label>
-                    <input type="text" id="cpf" name="cpf" class="form-container__input-text" placeholder="Informe seu CPF">
+                    <input type="number" id="cpf" name="cpf" class="form-container__input-text" placeholder="Informe seu CPF">
+                </div>
+
+                <!-- Campo de entrada para o CPF -->
+                <div class="form-container__input">
+                    <label for="sn" class="form-container__label">SN:</label>
+                    <input type="number" id="sn" name="sn" class="form-container__input-text" placeholder="Informe seu SN">
                 </div>
 
                 <!-- Campo de entrada para o e-mail -->
