--- a/templates/RF003-solic.html
+++ b/templates/RF003-solic.html
@@ -26,7 +26,7 @@
                 </div>
             </section>
             <section class="container-header-user">
-                <img src="" alt="Imagem de Perfil">
+                <img src="https://st4.depositphotos.com/11574170/25191/v/450/depositphotos_251916955-stock-illustration-user-glyph-color-icon.jpg" alt="Imagem de Perfil">
                 <div class="container-header-user_info">
                     <h2 class="container-header-user_nome">Paulo de Oliveira</h2>
                     <p class="container-header-user_cargo">Professor</p>
@@ -34,7 +34,26 @@
             </section>
         </header>
         <main>
-
+            <h1>Área de Solicitação</h1>
+            <section class="container-main">
+                <div class="container-main_form">
+                    <form action="" method="POST">
+                        <select name="tipo-serviço" id="tipo-serviço">
+                            <option value="/">Tipo de Serviço</option>
+                        </select>
+                        <select name="local" id="local">
+                            <option value="/">Local</option>
+                        </select>
+                        <div class="form_input-arquivo">
+                            <label for="arquivo">Foto (Opcional):</label>
+                            <input type="file" name="arquivo" id="arquivo">
+                        </div>
+                        <label for="adendo">Adendo:</label>
+                        <input type="text" placeholder="Digite informações adicionais..." maxlength="50">
+                        <button type="submit" class="form_btn-enviar">Enviar Solicitação</button>
+                    </form>
+                </div>
+            </section>
         </main>
     </body>
 </html>
