Arrumando titulo e subtitulo; Finalização

--- a/templates/RF003-solic.html
+++ b/templates/RF003-solic.html
@@ -34,7 +34,10 @@
             </section>
         </header>
         <main>
-            <h1>Área de Solicitação</h1>
+            <div class="main-titulo-subtitulo">
+                <h1>Área de Solicitação</h1>
+                <p>Coloque as Informações sobre o Serviço...</p>
+            </div>
             <section class="container-main">
                 <div class="container-main_form">
                     <form action="" method="POST">
