Continuando a formatação CSS

--- a/templates/RF003-solic.html
+++ b/templates/RF003-solic.html
@@ -12,6 +12,8 @@
          <link rel="stylesheet" href="/static/CSS/RF003-solic.css">
         <!-- Link Arquivo JS -->
          <script defer src="/static/JS/RF003-solic.js"></script>
+         <!-- Link para os ICONS -->
+         <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
 
     </head>
     <body>
@@ -19,10 +21,10 @@
         <header>
             <section class="container-header">
                 <div class="container-header_btn">
-                    <button class="container-header_btn-voltar" href=''>Voltar</button>
+                    <button class="container-header_btn-voltar" href=''><i class="fa-solid fa-arrow-left"></i>Voltar</button>
                 </div>
                 <div class="container-header_data">
-                    <p class="dia-semana">QUi</p><p class="dia">10</p><p class="mes">Set</p>
+                    <p class="dia-semana">Qui</p><p class="dia">10</p><p class="mes">Set</p>
                 </div>
             </section>
             <section class="container-header-user">
