--- a/static/CSS/RF003-solic.css
+++ b/static/CSS/RF003-solic.css
@@ -7,20 +7,67 @@ input,select{
 /* Estilo da Área do bnt-voltar e Data */
 .container-header{
     width: 100vw;
-    height: 20vh;
+    height: 10vh;
     display: flex;
     justify-content: space-between;
 }
 
+.container-header_btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-header_btn-voltar{
+    margin: 1rem;
+    padding: 0.5rem;
+    width: 10rem;
+    border-color: var(--color02);
+    border-radius: 5rem;
+    background: none;
+    font-weight: 700;
+    
+    transition-duration: 0.2s;
+}
+
+.container-header_btn-voltar i{
+    margin-right: 0.5rem;
+ }
+
+ /* Mudança de Cor do botão ao passar o cursor por cima */
+.container-header_btn-voltar:hover{
+    border-color: none;
+    background-color: var(--color02);
+    color: var(--color01);
+}
+
+/* Estilo da Data */
+.container-header_data{
+    margin: 1rem;
+    display: flex;
+    gap: 0.5rem;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+}
+
+.dia-semana{
+    color: var(--color05);
+    font-weight: 600;
+}
+
 /* Estilo da Área Usuario */
 .container-header-user{
-    width: 100%;
+    width: 100vw;
+    height: 10vh;
     display: flex;
+    align-items: center;
+    margin: 0rem 0rem 2rem 5rem;
 }
 
 .container-header-user img{
-    width: 5rem;
-    height: auto;
+    width: auto;
+    height: 5rem;
     border-radius: 100%;
 }
 
@@ -50,7 +97,7 @@ input,select{
 
 .container-main h1 p{
     margin-left: 0.5rem;
-    font-weight: 800;
+    font-weight: 700;
 }
 
 .container-main h1{
