--- a/templates/RF003-solic.html
+++ b/templates/RF003-solic.html
@@ -39,7 +39,7 @@
             <section class="container-main">
                 <div class="main-titulo-subtitulo">
                     <h1>Área de <p>Solicitação</p></h1>
-                    <p>Coloque as Informações sobre o Serviço...</p>
+                    <p class="subtitulo">Coloque as Informações sobre o Serviço...</p>
                 </div>
                 <div class="container-main_form">
                     <form action="" method="POST">
@@ -57,7 +57,7 @@
                         </div>
                         <div class="form_adendo">
                             <label for="adendo">Adendo:</label>
-                            <input type="text" id="adendo" name="adendo" placeholder="Digite informações adicionais..." maxlength="50">
+                            <input type="text" id="adendo" name="adendo" placeholder="Digite informações adicionais..." maxlength="60">
                         </div>
                         <button type="submit" class="form_btn-enviar">Enviar Solicitação</button>
                     </form>
