--- a/templates/RF001-cad.html
+++ b/templates/RF001-cad.html
@@ -27,8 +27,13 @@
                     <select id="profissao" name="profissao" class="form-container__select" onchange="toggleImages()">
                         <!-- Opção padrão (não selecionada) -->
                         <option value="">Selecione...</option>
-                        <option value="manutencao">Manutenção</option>
-                        <option value="solicitante">Solicitante</option>
+                        <option value="1">Técnico de Manutenção</option>
+                        <option value="2">Instrutor</option>
+                        <option value="3">Secretaria</option>
+                        <option value="4">OPP</option>
+                        <option value="5">Coordenador</option>
+                        <option value="6">Diretor</option>
+                        <option value="7">Outros</option>
                     </select>
                 </div>
 
