--- a/templates/RF001-cad.html
+++ b/templates/RF001-cad.html
@@ -11,7 +11,7 @@
     <main class="main">
         <div class="form-container">
             <h2 class="form-container__title">Cadastro</h2>
-            <form class="form-container__form" action="" method="post">
+            <form class="form-container__form" action="/RF001" method="post">
                 
                 <!-- Seção que exibe as imagens baseadas na seleção da profissão -->
                 <div class="form-container__images">
@@ -22,9 +22,9 @@
                 <!-- Seção de seleção de profissão -->
                 <div class="form-container__input">
                     <!-- Rótulo para a seleção da profissão -->
-                    <label for="profissao" class="form-container__label">Informe sua profissão:</label>
+                    <label for="funcao" class="form-container__label">Informe sua profissão:</label>
                     <!-- Campo de seleção com opções de profissão -->
-                    <select id="profissao" name="profissao" class="form-container__select" onchange="toggleImages()">
+                    <select id="funcao" name="funcao" class="form-container__select" onchange="toggleImages()">
                         <!-- Opção padrão (não selecionada) -->
                         <option value="">Selecione...</option>
                         <option value="1">Técnico de Manutenção</option>
@@ -46,13 +46,13 @@
                 <!-- Campo de entrada para o CPF -->
                 <div class="form-container__input">
                     <label for="cpf" class="form-container__label">CPF:</label>
-                    <input type="number" id="cpf" name="cpf" class="form-container__input-text" placeholder="Informe seu CPF">
+                    <input type="text" id="cpf" name="cpf" class="form-container__input-text" placeholder="Informe seu CPF">
                 </div>
 
                 <!-- Campo de entrada para o CPF -->
                 <div class="form-container__input">
                     <label for="sn" class="form-container__label">SN:</label>
-                    <input type="number" id="sn" name="sn" class="form-container__input-text" placeholder="Informe seu SN">
+                    <input type="text" id="sn" name="sn" class="form-container__input-text" placeholder="Informe seu SN">
                 </div>
 
                 <!-- Campo de entrada para o e-mail -->
