Mostrando o nome e função do funcionário

--- a/templates/RF003-solic.html
+++ b/templates/RF003-solic.html
@@ -30,8 +30,8 @@
             <section class="container-header-user">
                 <img src="https://st4.depositphotos.com/11574170/25191/v/450/depositphotos_251916955-stock-illustration-user-glyph-color-icon.jpg" alt="Imagem de Perfil">
                 <div class="container-header-user_info">
-                    <h2 class="container-header-user_nome">Paulo de Oliveira</h2>
-                    <p class="container-header-user_cargo">Professor</p>
+                    <h2 class="container-header-user_nome">{{campo_nome}}</h2>
+                    <p class="container-header-user_cargo">{{campo_funcao}}</p>
                 </div>
             </section>
         </header>
