--- a/templates/RF003-solic.html
+++ b/templates/RF003-solic.html
@@ -44,7 +44,7 @@
                 <div class="container-main_form">
                     <form action="" method="POST">
                         <div class="form_select">
-                            <select name="tipo-serviço" id="tipo-serviço">
+                            <select name="tipo-servico" id="tipo-servico">
                                 <option value="/">Tipo de Serviço</option>
                             </select>
                             <select name="local" id="local">
