--- a/templates/RF005-encamSolic.html
+++ b/templates/RF005-encamSolic.html
@@ -37,12 +37,15 @@
         <main>
             <section class="container-main">
                 <form action="" method="POST">
-                    <div class="form_select-user">
+                    <select name="form_select-user" id="form_select-user">
                         <img src="/" alt="Imagem de Perfil">
                         <div class="select-user_info">
-                            <h2></h2>
+                            <p>Pintor</p>
+                            <h2>Heitor Lima</h2>
                         </div>
-                    </div>
+                        <p class="status_disponivel">Disponível</p>
+                        <p class="status_n-disponivel">Não Disponível</p>
+                    </select>
                 </form>
             </section>
         </main>        
