Inserção do Bloco e local input

--- a/templates/RF003-solic.html
+++ b/templates/RF003-solic.html
@@ -47,8 +47,11 @@
                             <select name="tipo-serviço" id="tipo-serviço">
                                 <option value="/">Tipo de Serviço</option>
                             </select>
-                            <select name="local" id="local">
-                                <option value="/">Local</option>
+                            <select name="bloco" id="bloco">
+                                <option value="/">Bloco</option>
+                            </select>
+                            <select name="sala" id="sala">
+                                <option value="/">Sala</option>
                             </select>
                         </div>
                         <div class="form_input-arquivo">
