FInalização do input de servicos

--- a/templates/RF003-solic.html
+++ b/templates/RF003-solic.html
@@ -14,7 +14,8 @@
          <script defer src="/static/JS/RF003-solic.js"></script>
          <!-- Link para os ICONS -->
          <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
-
+         <!-- Link para o Ajax -->
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     </head>
     <body>
         <!-- Área de Informação do Usuario -->
